--- a/redes.html
+++ b/redes.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sígueme en mis redes | Fabry Orihuela</title>
 
-  <link rel="stylesheet" href="styles.css?v=10300">
+  <link rel="stylesheet" href="styles.css?v=11000">
 </head>
 
 <body>
@@ -18,22 +18,25 @@
       <h1>📱 Sígueme en mis redes</h1>
       <p class="tagline">Conecta conmigo y apoya mi música</p>
 
-      <!-- INSTAGRAM -->
+      <!-- YOUTUBE -->
       <a class="button"
-         href="https://www.instagram.com/fabryorihuelaoficial/         
-        📸 Instagram
+         href="https://www.youtube.com/@Fabricioorihuela"
+         target="_blank" rel="noopener">
+        ▶️ YouTube
+      </a>
+
+      <!-- TIKTOK -->
+      <a class="button"
+         href="https://www.tiktok.com/@fabry.orihuela."
+         target="_blank" rel="noopener">
+        🎵 TikTok
       </a>
 
       <!-- FACEBOOK -->
       <a class="button"
-         href="https://www.facebook.com/fabryorihuelaoficial/         
+         href="https://www.facebook.com/fabryorihuelaoficial/"
+         target="_blank" rel="noopener">
         👍 Facebook
-      </a>
-
-      <!-- YOUTUBE -->
-      <a class="button"
-         href="https://www.youtube.com/@Fabricioorihuela         
-        ▶️ YouTube
       </a>
 
       <!-- SPOTIFY -->
