--- a/redes.html
+++ b/redes.html
@@ -27,7 +27,7 @@
 
       <!-- TIKTOK -->
       <a class="button"
-         href="https://www.tiktok.com/@fabry.orihuela."
+         href="https://www.tiktok.com/@fabry.orihuela"
          target="_blank" rel="noopener">
         🎵 TikTok
       </a>
