--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- BOTONES -->
       <a href="canciones.html" class="button">🎶 Pedir canción</a>
 
-      <a href="shows.html" class="button">🎤 Mis Shows</a>
+      <a href="shows.html" class="button">🎤 Calendario de Shows</a>
 
       <a href="merch.html" class="button">🛍️ Merchandising</a>
 
