--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
       <a href="redes.html" class="button">📱 Sígueme en mis redes</a>
 
+      <a href="booking.html" class="button">📅 Booking</a>
+      
       <!-- TEXTO FINAL -->
       <p class="footer-note">Contratos para todo tipo de eventos</p>
 
