Update button text for song request

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="tagline">Cantante / Guitarrista • Live Music</p>
 
       <!-- BOTONES -->
-      <a href="canciones.html" class="button">🎶 Pedir canción</a>
+      <a href="canciones.html" class="button">🎶 Pedir canción en vivo</a>
 
       <a href="shows.html" class="button">🎤 Calendario de Shows</a>
 
