--- a/merch.html
+++ b/merch.html
@@ -17,12 +17,16 @@
       <p class="tagline">Apoya la música independiente 🤘</p>
 
       <!-- CAMISETA -->
-      <div class="merch-item">
-        <div class="merch-top">
-          <h3>👕 Camiseta Oficial</h3>
-          <div class="price">$20</div>
-        </div>
-        <p>Algodón premium • Unisex</p>
+     <div class="merch-item">
+  <div class="merch-top">
+    <h3>👕 Camiseta Oficial</h3>
+    <div class="price">$25</div>
+  </div>
+  <p>Algodón premium • Unisex</p>
+
+  <a class="button" href="...">👕 Comprar por WhatsApp</a>
+</div>
+
 
         <a class="button"
            href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
