--- a/merch.html
+++ b/merch.html
@@ -20,8 +20,8 @@
     <div class="merch-item">
 
   <div class="merch-gallery">
-    <img src="img/camiseta-1.jpg" alt="Camiseta Oficial frente">
-    <img src="img/camiseta-2.jpg" alt="Camiseta Oficial espalda">
+    <img src="Front camiseta-1.jpg" alt="Camiseta Oficial frente">
+    <img src="Front camiseta-2.jpg" alt="Camiseta Oficial espalda">
     <img src="img/camiseta-3.jpg" alt="Camiseta Oficial detalle">
   </div>
 
