Update merch.html to simplify item display
Removed the merchandise gallery and added a WhatsApp purchase link.

--- a/merch.html
+++ b/merch.html
@@ -18,12 +18,10 @@
 
       <!-- CAMISETA -->
     <div class="merch-item">
-
-  <div class="merch-gallery">
-    <img src="img/camiseta-1.jpg" alt="Camiseta Oficial frente">
-    <img src="img/camiseta-2.jpg" alt="Camiseta Oficial espalda">
-    <img src="img/camiseta-3.jpg" alt="Camiseta Oficial detalle">
-  </div>
+  <!-- FOTO -->
+  <img src="img/camiseta-1.jpg"
+       alt="Camiseta Oficial Fabry Orihuela"
+       class="merch-img">
 
   <div class="merch-top">
     <h3>👕 Camiseta Oficial</h3>
@@ -31,6 +29,16 @@
   </div>
 
   <p>Algodón premium • Unisex</p>
+
+  <a class="button"
+     href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__"
+     target="_blank" rel="noopener">
+    👕 Comprar por WhatsApp
+  </a>
+
+  <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
+</div>
+
 
   <a class="button"
      href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__"
