Update merchandise details and links in merch.html

--- a/merch.html
+++ b/merch.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Merchandising | Fabry Orihuela</title>
-  <link rel="stylesheet" href="styles.css?v=9600">
+  <link rel="stylesheet" href="styles.css?v=14000">
 </head>
 
 <body>
@@ -17,51 +17,20 @@
       <p class="tagline">Apoya la música independiente 🤘</p>
 
       <!-- CAMISETA -->
-    <div class="merch-item">
-  <!-- FOTO -->
-  <img src="img/camiseta-1.jpg"
-       alt="Camiseta Oficial Fabry Orihuela"
-       class="merch-img">
+      <div class="merch-item">
 
-  <div class="merch-top">
-    <h3>👕 Camiseta Oficial</h3>
-    <div class="price">$25</div>
-  </div>
+        <!-- FOTO (sube img/camiseta-1.jpg) -->
+        <img class="merch-img" src="img/camiseta-1.jpg" alt="Camiseta Oficial Fabry Orihuela">
 
-  <p>Algodón premium • Unisex</p>
+        <div class="merch-top">
+          <h3>👕 Camiseta Oficial</h3>
+          <div class="price">$25</div>
+        </div>
 
-  <a class="button"
-     href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__"
-     target="_blank" rel="noopener">
-    👕 Comprar por WhatsApp
-  </a>
-
-  <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
-</div>
-
-
-  <a class="button"
-     href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__"
-     target="_blank" rel="noopener">
-    👕 Comprar por WhatsApp
-  </a>
-
-  <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
-</div>
-
-
-  <a class="button"
-     href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__"
-     target="_blank" rel="noopener">
-    👕 Comprar por WhatsApp
-  </a>
-
-  <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
-</div>
-
+        <p>Algodón premium • Unisex</p>
 
         <a class="button"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
            target="_blank" rel="noopener">
           👕 Comprar por WhatsApp
         </a>
@@ -71,14 +40,19 @@
 
       <!-- GORRA -->
       <div class="merch-item">
+
+        <!-- FOTO (sube img/gorra-1.jpg) -->
+        <img class="merch-img" src="img/gorra-1.jpg" alt="Gorra Oficial Fabry Orihuela">
+
         <div class="merch-top">
           <h3>🧢 Gorra Oficial</h3>
           <div class="price">$15</div>
         </div>
+
         <p>Edición limitada</p>
 
         <a class="button"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL%20(%2420).%0A%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL%20(%2415).%0A%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
            target="_blank" rel="noopener">
           🧢 Comprar por WhatsApp
         </a>
@@ -86,16 +60,17 @@
         <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <!-- FLASH DRIVE  -->
+      <!-- FLASH DRIVE -->
       <div class="merch-item">
         <div class="merch-top">
-          <h3>💾 Flash Drive Oficial </h3>
+          <h3>💾 Flash Drive Oficial (2 GB)</h3>
           <div class="price">$15</div>
         </div>
-        <p>Incluye Versiones en vivo + Canciones originales </p>
+
+        <p>Incluye versiones en vivo + canciones originales</p>
 
         <a class="button"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle%20(a%20este%20n%C3%BAmero)%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo.%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
            target="_blank" rel="noopener">
           💾 Comprar por WhatsApp
         </a>
@@ -103,21 +78,20 @@
         <p class="pay-note">Entrega física • Ideal para shows</p>
       </div>
 
-      <!-- LINK A MÚSICA DIGITAL (NO WhatsApp aquí, para que no se vea repetido) -->
+      <!-- MÚSICA -->
       <div class="merch-item">
-  <div class="merch-top">
-    <h3>💿 Música / Contenido Digital</h3>
-  </div>
+        <div class="merch-top">
+          <h3>💿 Música / Contenido Digital</h3>
+        </div>
 
-  <p>Singles digitales</p>
+        <p>Singles digitales</p>
 
-  <a class="button" href="musica.html">
-    🎵 Ver singles
-  </a>
+        <a class="button" href="musica.html">
+          🎵 Ver música
+        </a>
 
- 
-</div>
-
+        <p class="pay-note">Spotify + Apple Music</p>
+      </div>
 
       <a href="index.html" class="button">⬅️ Volver</a>
 
@@ -128,4 +102,6 @@
     </div>
   </div>
 </body>
+</html>
+
 </html>
