--- a/propina.html
+++ b/propina.html
@@ -29,7 +29,7 @@
         <a class="btn" href="https://cash.app/$Fabrymusic" target="_blank" rel="noopener">Cash App</a>
       </div>
       <div class="row">
-        <a class="btn" href="https://venmo.com/@Fabryorihuela-Music" target="_blank" rel="noopener">Venmo</a>
+        <a class="btn" href="https://venmo.com/Fabryorihuela-Music" target="_blank" rel="noopener">Venmo</a>
         <a class="btn" href="index.html">Inicio</a>
       </div>
 
