Implement sliding gallery for camiseta images
Added a sliding gallery for the official t-shirt with multiple images.

--- a/merch.html
+++ b/merch.html
@@ -20,7 +20,18 @@
       <div class="merch-item">
 
         <!-- FOTO (sube img/camiseta-1.jpg) -->
-        <img class="merch-img" src="img/camiseta-1.jpg" alt="Camiseta Oficial Fabry Orihuela">
+       <!-- GALERÍA DESLIZABLE - CAMISETA -->
+<div class="slider" aria-label="Galería de la camiseta">
+  <div class="slides">
+    <img src="img/camiseta-1.jpg" alt="Camiseta Oficial - Foto 1">
+    <img src="img/camiseta-2.jpg" alt="Camiseta Oficial - Foto 2">
+    <img src="img/camiseta-3.jpg" alt="Camiseta Oficial - Foto 3">
+  </div>
+</div>
+<div class="dots" aria-hidden="true">
+  <span></span><span></span><span></span>
+</div>
+
 
         <div class="merch-top">
           <h3>👕 Camiseta Oficial</h3>
