--- a/merch.html
+++ b/merch.html
@@ -1,107 +1,97 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Merchandising | Fabry Orihuela</title>
-  <link rel="stylesheet" href="styles.css?v=30001">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css?v=40001">
 </head>
 
 <body>
-  <div class="container">
-    <div class="card">
 
-      <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
+<div class="container">
+  <div class="card">
 
-      <h1>🛍️ Merchandising</h1>
-      <p class="tagline">Apoya la música independiente 🤘</p>
+    <!-- LOGO -->
+    <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
-      <!-- ===================== CAMISETA ===================== -->
-      <div class="merch-item" style="text-align:center;">
+    <h1>🛍️ Merchandising</h1>
+    <p class="tagline">Apoya la música independiente 🤘</p>
 
-        <!-- Galería deslizable (Swipe) -->
-        <div class="slider" aria-label="Galería de la camiseta">
-          <div class="slides">
-            <img src="img/camiseta-1.jpg" alt="Camiseta Oficial - Foto 1">
-            <img src="img/camiseta-2.jpg" alt="Camiseta Oficial - Foto 2">
-            <img src="img/camiseta-3.jpg" alt="Camiseta Oficial - Foto 3">
-          </div>
+    <!-- ================= CAMISETA ================= -->
+    <div class="merch-item">
+
+      <!-- Galería mini deslizable -->
+      <div class="mini-slider">
+        <div class="mini-track">
+          <img src="img/camiseta-1.jpg" alt="Camiseta vista 1">
+          <img src="img/camiseta-2.jpg" alt="Camiseta vista 2">
+          <img src="img/camiseta-3.jpg" alt="Camiseta vista 3">
         </div>
-        <div class="dots" aria-hidden="true"><span></span><span></span><span></span></div>
-
-        <div class="merch-top" style="text-align:left;">
-          <h3>👕 Camiseta Oficial</h3>
-          <div class="price">$25</div>
-        </div>
-
-        <p style="text-align:left;">Algodón premium • Unisex</p>
-
-        <a class="btn"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0A%0ATalla%3A%20__%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-           target="_blank" rel="noopener">
-          👕 Comprar por WhatsApp
-        </a>
-
-        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <!-- ===================== GORRA ===================== -->
-      <div class="merch-item" style="text-align:center;">
+      <h3>👕 Camiseta Oficial</h3>
+      <p class="price">$25</p>
+      <p>Algodón premium • Unisex</p>
 
-        <!-- Galería deslizable (Swipe) -->
-        <div class="slider" aria-label="Galería de la gorra">
-          <div class="slides">
-            <img src="img/gorra-1.jpg" alt="Gorra Oficial - Foto 1">
-            <img src="img/gorra-2.jpg" alt="Gorra Oficial - Foto 2">
-          </div>
-        </div>
-        <div class="dots" aria-hidden="true"><span></span><span></span></div>
+      <a class="btn"
+         href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0ATalla%3A%20__%0ACantidad%3A%20__"
+         target="_blank">
+        👕 Comprar por WhatsApp
+      </a>
 
-        <div class="merch-top" style="text-align:left;">
-          <h3>🧢 Gorra Oficial</h3>
-          <div class="price">$15</div>
-        </div>
-
-        <p style="text-align:left;">Edición limitada</p>
-
-        <a class="btn"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL%20(%2415).%0A%0ACantidad%3A%20__%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-           target="_blank" rel="noopener">
-          🧢 Comprar por WhatsApp
-        </a>
-
-        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
-      </div>
-
-      <!-- ===================== FLASH DRIVE ===================== -->
-      <div class="merch-item">
-        <div class="merch-top">
-          <h3>💾 Flash Drive Oficial (2 GB)</h3>
-          <div class="price">$15</div>
-        </div>
-
-        <p>Incluye versiones en vivo + canciones originales</p>
-
-        <a class="btn"
-           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415).%0A%0AEntrega%3A%20Show%20o%20Env%C3%ADo.%0A%0APagos%3A%20Cash%20App%20(%24fabrymusic)%20%7C%20Venmo%20(%40fabryorihuela-music)%20%7C%20Zelle.%0A%0AEnviar%C3%A9%20el%20comprobante%20por%20aqu%C3%AD."
-           target="_blank" rel="noopener">
-          💾 Comprar por WhatsApp
-        </a>
-
-        <p class="pay-note">Entrega física • Ideal para shows</p>
-      </div>
-
-      <a href="index.html" class="btn">⬅️ Volver</a>
-
-      <p class="small" style="text-align:center; opacity:.85; margin-top:12px;">
-        Cash App: <strong>$fabrymusic</strong> • Venmo: <strong>@fabryorihuela-music</strong> • Zelle: <strong>+1 484 544 2917</strong>
-      </p>
-
-      <p class="small" style="text-align:center; opacity:.65; margin-top:6px;">
-        *Si no tienes camiseta-2/3 o gorra-2, bórralas del HTML para que no aparezca imagen rota.*
-      </p>
-
+      <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
     </div>
+
+    <!-- ================= GORRA ================= -->
+    <div class="merch-item">
+
+      <div class="mini-slider">
+        <div class="mini-track">
+          <img src="img/gorra-1.jpg" alt="Gorra vista 1">
+          <img src="img/gorra-2.jpg" alt="Gorra vista 2">
+        </div>
+      </div>
+
+      <h3>🧢 Gorra Oficial</h3>
+      <p class="price">$15</p>
+      <p>Edición limitada</p>
+
+      <a class="btn"
+         href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL%20(%2415).%0ACantidad%3A%20__"
+         target="_blank">
+        🧢 Comprar por WhatsApp
+      </a>
+
+      <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
+    </div>
+
+    <!-- ================= FLASH DRIVE ================= -->
+    <div class="merch-item">
+      <h3>💾 Flash Drive Oficial (2GB)</h3>
+      <p class="price">$15</p>
+      <p>Versiones en vivo + canciones originales</p>
+
+      <a class="btn"
+         href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415)"
+         target="_blank">
+        💾 Comprar por WhatsApp
+      </a>
+
+      <p class="pay-note">Entrega física • Ideal para shows</p>
+    </div>
+
+    <!-- VOLVER -->
+    <a href="index.html" class="btn">⬅️ Volver</a>
+
+    <p class="small" style="text-align:center;margin-top:14px;">
+      Cash App: <strong>$fabrymusic</strong> ·
+      Venmo: <strong>@fabryorihuela-music</strong> ·
+      Zelle: <strong>+1 484 544 2917</strong>
+    </p>
+
   </div>
+</div>
+
 </body>
 </html>
