--- a/merch.html
+++ b/merch.html
@@ -4,94 +4,85 @@
   <meta charset="UTF-8">
   <title>Merchandising | Fabry Orihuela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css?v=40001">
+  <link rel="stylesheet" href="styles.css?v=50001">
 </head>
 
 <body>
+  <div class="container">
+    <div class="card">
 
-<div class="container">
-  <div class="card">
+      <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
-    <!-- LOGO -->
-    <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
+      <h1>🛍️ Merchandising</h1>
+      <p class="tagline">Apoya la música independiente 🤘</p>
 
-    <h1>🛍️ Merchandising</h1>
-    <p class="tagline">Apoya la música independiente 🤘</p>
+      <!-- CAMISETA -->
+      <div class="merch-item">
+        <h3>👕 Camiseta Oficial</h3>
+        <p class="price">$25</p>
+        <p>Algodón premium • Unisex</p>
 
-    <!-- ================= CAMISETA ================= -->
-    <div class="merch-item">
-
-      <!-- Galería mini deslizable -->
-      <div class="mini-slider">
-        <div class="mini-track">
-          <img src="img/camiseta-1.jpg" alt="Camiseta vista 1">
-          <img src="img/camiseta-2.jpg" alt="Camiseta vista 2">
-          <img src="img/camiseta-3.jpg" alt="Camiseta vista 3">
+        <div class="mini-slider">
+          <div class="mini-track">
+            <img src="img/camiseta-1.jpg" alt="Camiseta vista 1">
+            <img src="img/camiseta-2.jpg" alt="Camiseta vista 2">
+            <img src="img/camiseta-3.jpg" alt="Camiseta vista 3">
+          </div>
         </div>
+
+        <a class="btn"
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0ATalla%3A%20__%0ACantidad%3A%20__"
+           target="_blank" rel="noopener">
+          👕 Comprar por WhatsApp
+        </a>
+
+        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <h3>👕 Camiseta Oficial</h3>
-      <p class="price">$25</p>
-      <p>Algodón premium • Unisex</p>
+      <!-- GORRA -->
+      <div class="merch-item">
+        <h3>🧢 Gorra Oficial</h3>
+        <p class="price">$15</p>
+        <p>Edición limitada</p>
 
-      <a class="btn"
-         href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0ATalla%3A%20__%0ACantidad%3A%20__"
-         target="_blank">
-        👕 Comprar por WhatsApp
-      </a>
-
-      <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
-    </div>
-
-    <!-- ================= GORRA ================= -->
-    <div class="merch-item">
-
-      <div class="mini-slider">
-        <div class="mini-track">
-          <img src="img/gorra-1.jpg" alt="Gorra vista 1">
-          <img src="img/gorra-2.jpg" alt="Gorra vista 2">
+        <div class="mini-slider">
+          <div class="mini-track">
+            <img src="img/gorra-1.jpg" alt="Gorra vista 1">
+            <img src="img/gorra-2.jpg" alt="Gorra vista 2">
+          </div>
         </div>
+
+        <a class="btn"
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL%20(%2415).%0ACantidad%3A%20__"
+           target="_blank" rel="noopener">
+          🧢 Comprar por WhatsApp
+        </a>
+
+        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
       </div>
 
-      <h3>🧢 Gorra Oficial</h3>
-      <p class="price">$15</p>
-      <p>Edición limitada</p>
+      <!-- FLASH DRIVE -->
+      <div class="merch-item">
+        <h3>💾 Flash Drive Oficial (2GB)</h3>
+        <p class="price">$15</p>
+        <p>Incluye versiones en vivo + canciones originales</p>
 
-      <a class="btn"
-         href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20GORRA%20OFICIAL%20(%2415).%0ACantidad%3A%20__"
-         target="_blank">
-        🧢 Comprar por WhatsApp
-      </a>
+        <a class="btn"
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415)"
+           target="_blank" rel="noopener">
+          💾 Comprar por WhatsApp
+        </a>
 
-      <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
+        <p class="pay-note">Entrega física • Ideal para shows</p>
+      </div>
+
+      <a href="index.html" class="btn">⬅️ Volver</a>
+
+      <p class="small" style="text-align:center;margin-top:14px;">
+        Cash App: <strong>$fabrymusic</strong> · Venmo: <strong>@fabryorihuela-music</strong> · Zelle: <strong>+1 484 544 2917</strong>
+      </p>
+
     </div>
-
-    <!-- ================= FLASH DRIVE ================= -->
-    <div class="merch-item">
-      <h3>💾 Flash Drive Oficial (2GB)</h3>
-      <p class="price">$15</p>
-      <p>Versiones en vivo + canciones originales</p>
-
-      <a class="btn"
-         href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20el%20FLASH%20DRIVE%20OFICIAL%202GB%20(%2415)"
-         target="_blank">
-        💾 Comprar por WhatsApp
-      </a>
-
-      <p class="pay-note">Entrega física • Ideal para shows</p>
-    </div>
-
-    <!-- VOLVER -->
-    <a href="index.html" class="btn">⬅️ Volver</a>
-
-    <p class="small" style="text-align:center;margin-top:14px;">
-      Cash App: <strong>$fabrymusic</strong> ·
-      Venmo: <strong>@fabryorihuela-music</strong> ·
-      Zelle: <strong>+1 484 544 2917</strong>
-    </p>
-
   </div>
-</div>
-
 </body>
 </html>
