Add link to Música / Contenido Digital

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
       <a href="merch.html" class="button">🛍️ Merchandising</a>
 
+      <a class="btn" href="musica.html">💿 Música / Contenido Digital</a>
+
       <a href="propina.html" class="button">💵 Propina</a>
 
       <a href="redes.html" class="button">📱 Sígueme en mis redes</a>
