Refactor musica.html for improved structure and links

--- a/musica.html
+++ b/musica.html
@@ -1,42 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Música | Fabry Orihuela</title>
-  <link rel="stylesheet" href="styles.css?v=10000">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css?v=70001">
 </head>
 
 <body>
   <div class="container">
     <div class="card">
 
-      <!-- LOGO -->
       <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
-      <h1>💿 Música</h1>
+      <h1>💿 Música / Contenido Digital</h1>
       <p class="tagline">Escúchame en plataformas digitales</p>
 
       <!-- SPOTIFY -->
-      <div class="merch-item">
+      <div class="merch-item" style="text-align:center;">
         <h3>🟢 Spotify</h3>
         <p>Escucha todas mis canciones y lanzamientos</p>
 
-        <a class="button"
-           href="https://open.spotify.com/artist/3gwUw97MMCSVKbFocMIz0a"
+        <a class="btn"
+           href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a"
            target="_blank" rel="noopener">
           ▶️ Escuchar en Spotify
         </a>
       </div>
 
-     <!-- APPLE MUSIC -->
-<div class="merch-item">
-  <h3>🍎 Apple Music</h3>
-  <p>Disponible también en Apple Music</p>
+      <!-- APPLE MUSIC -->
+      <div class="merch-item" style="text-align:center;">
+        <h3>🍎 Apple Music</h3>
+        <p>Disponible también en Apple Music</p>
 
-  <a class="button"
-     href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
-     target="_blank" rel="noopener">
-    ▶️ Escuchar en Apple Music
-  </a>
-</div>
+        <a class="btn"
+           href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
+           target="_blank" rel="noopener">
+          ▶️ Escuchar en Apple Music
+        </a>
+      </div>
+
+      <!-- CONTENIDO DIGITAL (opcional por WhatsApp) -->
+      <div class="merch-item" style="text-align:center;">
+        <h3>🎧 Contenido Digital</h3>
+        <p>Singles digitales y material exclusivo</p>
+
+        <a class="btn"
+           href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20informaci%C3%B3n%20sobre%20Contenido%20Digital%20(Singles%20digitales)."
+           target="_blank" rel="noopener">
+          💬 Pedir por WhatsApp
+        </a>
+
+        <p class="pay-note">Pagos: Cash App • Venmo • Zelle</p>
+      </div>
+
+      <a href="index.html" class="btn">⬅️ Volver</a>
+
+    </div>
+  </div>
+</body>
+</html>
