--- a/shows.html
+++ b/shows.html
@@ -59,9 +59,12 @@
 
   <div class="calendar-container">
     <iframe 
-      src="https://calendar.google.com/calendar/embed?src=fabricioorihuelamusic%40gmail.com&ctz=America%2FNew_York"
-      scrolling="no">
-    </iframe>
+      <iframe
+  src="https://calendar.google.com/calendar/embed?src=fabricioorihuelamusic%40gmail.com&ctz=America%2FNew_York&mode=AGENDA&showTitle=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0"
+  style="border:0; width:100%; height:750px; border-radius:18px;"
+  frameborder="0"
+  scrolling="no">
+</iframe>
   </div>
 
 </body>
