Add Instagram link to redes.html

--- a/redes.html
+++ b/redes.html
@@ -25,6 +25,12 @@
         ▶️ YouTube
       </a>
 
+      <a class="btn social instagram"
+   href="https://www.instagram.com/fabryorihuelaoficial"
+   target="_blank" rel="noopener">
+  📸 Instagram
+</a>
+
       <!-- TIKTOK -->
       <a class="button"
          href="https://www.tiktok.com/@fabry.orihuela"
