Refactor HTML structure and improve semantics

--- a/index.html
+++ b/index.html
@@ -1,470 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fabry Orihuela | Inicio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fabry Orihuela</title>
 
-  <!-- Tipografía elegante (bohemia suave) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
-
-  <style>
-    :root{
-      --bg: #07070b;
-      --glass: rgba(12,12,16,.55);
-      --stroke: rgba(255,255,255,.16);
-      --text: rgba(255,255,255,.92);
-      --muted: rgba(255,255,255,.72);
-
-      /* Plata */
-      --silverTop: rgba(255,255,255,.95);
-      --silverMid: rgba(255,255,255,.72);
-      --silverLow: rgba(255,255,255,.42);
-
-      --shadow: 0 18px 45px rgba(0,0,0,.55);
-      --radius: 24px;
-      --radiusBtn: 18px;
-    }
-
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--text);
-      min-height:100vh;
-
-      /* Fondo (cambia aquí si quieres otra imagen) */
-      background:
-        radial-gradient(circle at 25% 10%, rgba(255,255,255,.12), transparent 55%),
-        linear-gradient(rgba(0,0,0,.72), rgba(0,0,0,.82)),
-        url("img/fondo-optimizado.jpg") center/cover no-repeat fixed;
-    }
-
-    .wrap{
-      width: min(980px, 92vw);
-      margin: 0 auto;
-      padding: 22px 0 44px;
-    }
-
-    /* TOP BAR */
-    .topbar{
-      display:flex;
-      align-items:center;
-      justify-content:flex-end;
-      margin-bottom: 14px;
-    }
-
-    /* Switch pill ES/EN */
-    .lang-switch{
-      display:inline-flex;
-      align-items:center;
-      gap:0;
-      padding: 6px;
-      border-radius: 999px;
-      border: 1px solid var(--stroke);
-      background: rgba(10,10,14,.50);
-      box-shadow: 0 10px 22px rgba(0,0,0,.35);
-      user-select:none;
-    }
-    .lang-switch button{
-      border:0;
-      background: transparent;
-      color: var(--muted);
-      font-weight: 900;
-      padding: 10px 14px;
-      border-radius: 999px;
-      cursor:pointer;
-      letter-spacing: .6px;
-      transition: background .15s ease, color .15s ease, transform .15s ease;
-    }
-    .lang-switch button:hover{ transform: translateY(-1px); }
-    .lang-switch button.active{
-      color: #0b0b10;
-      background: linear-gradient(180deg, var(--silverTop), var(--silverLow));
-      box-shadow: 0 10px 18px rgba(0,0,0,.25);
-    }
-
-    /* CARD */
-    .card{
-      background: var(--glass);
-      border: 1px solid var(--stroke);
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(10px);
-      border-radius: var(--radius);
-      padding: 22px 18px 22px;
-      overflow:hidden;
-    }
-
-    /* BRAND */
-    .brand{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      text-align:center;
-      gap:10px;
-      padding-top:6px;
-    }
-
-    .logo{
-      width: 190px;
-      max-width: 70%;
-      height:auto;
-      filter: drop-shadow(0 14px 26px rgba(0,0,0,.55));
-      animation: floatIn .8s ease both;
-    }
-
-    h1{
-      margin:0;
-      font-family: "Playfair Display", serif;
-      font-weight: 600;
-      letter-spacing: .5px;
-      font-size: clamp(30px, 4vw, 46px);
-      text-shadow: 0 12px 30px rgba(0,0,0,.55);
-    }
-
-    .subtitle{
-      margin: 2px 0 0;
-      font-size: 13.5px;
-      letter-spacing: 3px;
-      text-transform: uppercase;
-      color: rgba(255,255,255,.90);
-      opacity:.95;
-    }
-
-    /* VIDEO + CONTROLS */
-    .video-shell{
-      position: relative;
-      margin: 18px auto 14px;
-      width: min(720px, 100%);
-      border-radius: 20px;
-      overflow:hidden;
-      border: 1px solid rgba(255,255,255,.18);
-      box-shadow: 0 18px 45px rgba(0,0,0,.55);
-      background: rgba(0,0,0,.35);
-
-      transform: translateY(12px);
-      opacity: 0;
-      animation: riseIn .9s ease .15s forwards;
-    }
-
-    .video-shell iframe{
-      width:100%;
-      aspect-ratio: 9/16;
-      border:0;
-      display:block;
-      background:#000;
-    }
-
-    .video-overlay{
-      position:absolute;
-      inset:0;
-      pointer-events:none;
-      background:
-        linear-gradient(to bottom, rgba(0,0,0,.35), transparent 45%, rgba(0,0,0,.35));
-      opacity:.85;
-    }
-
-    .video-controls{
-      position:absolute;
-      top: 12px;
-      right: 12px;
-      display:flex;
-      gap:10px;
-      pointer-events:auto;
-    }
-
-    .icon-btn{
-      border: 1px solid rgba(255,255,255,.22);
-      background: rgba(10,10,14,.55);
-      color: rgba(255,255,255,.92);
-      font-weight: 900;
-      padding: 10px 12px;
-      border-radius: 14px;
-      cursor:pointer;
-      box-shadow: 0 10px 18px rgba(0,0,0,.35);
-      transition: transform .15s ease, filter .15s ease;
-    }
-    .icon-btn:hover{ transform: translateY(-1px); filter: brightness(1.06); }
-
-    /* MENU 3 (PC en fila, móvil tarjetas) */
-    .menu{
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 12px;
-      margin-top: 14px;
-    }
-
-    @media (max-width: 720px){
-      .menu{ grid-template-columns: 1fr; }
-      .logo{ width: 170px; }
-      .wrap{ padding-top: 16px; }
-    }
-
-    .tile{
-      position: relative;
-      text-decoration:none;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      padding: 16px 16px;
-      border-radius: 18px;
-      background: rgba(10,10,14,.40);
-      border: 1px solid rgba(255,255,255,.16);
-      box-shadow: 0 12px 26px rgba(0,0,0,.40);
-      overflow:hidden;
-      transition: transform .15s ease, filter .15s ease;
-    }
-    .tile:hover{ transform: translateY(-2px); filter: brightness(1.04); }
-
-    .tile-left{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      min-width:0;
-    }
-
-    .badge{
-      width: 44px;
-      height: 44px;
-      border-radius: 14px;
-      display:grid;
-      place-items:center;
-      font-size: 20px;
-      color: #0b0b10;
-      background: linear-gradient(180deg, var(--silverTop), var(--silverLow));
-      border: 1px solid rgba(255,255,255,.25);
-      box-shadow: 0 10px 18px rgba(0,0,0,.25);
-      flex: 0 0 auto;
-    }
-
-    .tile-title{
-      font-weight: 900;
-      font-size: 16px;
-      letter-spacing:.2px;
-      color: rgba(255,255,255,.95);
-      white-space: nowrap;
-      overflow:hidden;
-      text-overflow: ellipsis;
-    }
-    .tile-sub{
-      margin-top: 2px;
-      font-size: 12.8px;
-      color: rgba(255,255,255,.75);
-      white-space: nowrap;
-      overflow:hidden;
-      text-overflow: ellipsis;
-    }
-
-    .chev{
-      color: rgba(255,255,255,.65);
-      font-weight: 900;
-      font-size: 18px;
-      flex: 0 0 auto;
-    }
-
-    .foot{
-      margin-top: 16px;
-      text-align:center;
-      color: var(--muted);
-      font-size: 13px;
-    }
-
-    @keyframes riseIn{
-      to{ transform: translateY(0); opacity:1; }
-    }
-    @keyframes floatIn{
-      from{ transform: translateY(10px); opacity:0; }
-      to{ transform: translateY(0); opacity:1; }
-    }
-  </style>
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="styles.css?v=2000">
 </head>
 
 <body>
-  <div class="wrap">
-    <div class="topbar">
-      <!-- Switch pill ES/EN -->
-      <div class="lang-switch" role="tablist" aria-label="Language switch">
-        <button id="btnES" class="active" type="button" aria-selected="true">ES</button>
-        <button id="btnEN" type="button" aria-selected="false">EN</button>
-      </div>
-    </div>
 
+  <div class="container">
     <div class="card">
-      <div class="brand">
-        <!-- Tu logo completo -->
-        <img class="logo" src="img/logo.png" alt="Fabry Orihuela Logo">
 
-        <h1 id="nameText">Fabry Orihuela</h1>
-        <p class="subtitle" id="subtitleText">Latin Music · Pop · Rock · Ballads</p>
-      </div>
+      <!-- LOGO -->
+      <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
 
-      <!-- Video + Mute/Unmute -->
-      <div class="video-shell">
-        <div class="video-controls">
-          <button class="icon-btn" id="muteBtn" type="button">🔇 Mute</button>
-        </div>
-        <div class="video-overlay"></div>
+      <!-- NOMBRE -->
+      <h1>Fabry Orihuela</h1>
+      <p class="tagline">Cantante / Guitarrista • Live Music</p>
 
-        <iframe
-          id="welcomeVideo"
-          src="https://www.youtube.com/embed/jSR1ZkBSNHw?rel=0&modestbranding=1&playsinline=1&mute=1"
-          title="Fabry Orihuela - Welcome"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen>
-        </iframe>
-      </div>
+      <!-- BOTONES -->
+      <a href="canciones.html" class="button">🎶 Pedir canción en vivo</a>
 
-      <!-- Menu PRO (tiles) -->
-      <div class="menu">
-        <a class="tile" href="canciones.html" id="linkSong">
-          <div class="tile-left">
-            <div class="badge">🎶</div>
-            <div style="min-width:0;">
-              <div class="tile-title" id="songTitle">Pedir canción</div>
-              <div class="tile-sub" id="songSub">Request a Song</div>
-            </div>
-          </div>
-          <div class="chev">›</div>
-        </a>
+      <a href="shows.html" class="button">🎤 Calendario de Shows</a>
 
-        <a class="tile" href="merch.html" id="linkMerch">
-          <div class="tile-left">
-            <div class="badge">🛍️</div>
-            <div style="min-width:0;">
-              <div class="tile-title" id="merchTitle">Merchandising</div>
-              <div class="tile-sub" id="merchSub">Merch</div>
-            </div>
-          </div>
-          <div class="chev">›</div>
-        </a>
+      <a href="merch.html" class="button">🛍️ Merchandising</a>
 
-        <a class="tile" href="redes.html" id="linkFollow">
-          <div class="tile-left">
-            <div class="badge">📱</div>
-            <div style="min-width:0;">
-              <div class="tile-title" id="followTitle">Sígueme</div>
-              <div class="tile-sub" id="followSub">Follow me</div>
-            </div>
-          </div>
-          <div class="chev">›</div>
-        </a>
-      </div>
+      <a class="btn" href="musica.html">💿 Música / Contenido Digital</a>
 
-      <div class="foot" id="footText">Muchas gracias por tu apoyo 🙏</div>
+      <a href="propina.html" class="button">💵 Propina</a>
+
+      <a href="redes.html" class="button">📱 Sígueme en mis redes</a>
+
+      <a href="booking.html" class="button">📅 Booking</a>
+      
+      <!-- TEXTO FINAL -->
+      <p class="footer-note">Contratos para todo tipo de eventos</p>
+
     </div>
   </div>
 
-  <script>
-    // ====== i18n ======
-    const i18n = {
-      es: {
-        docTitle: "Fabry Orihuela | Inicio",
-        videoTitle: "Fabry Orihuela - Bienvenida",
-        subtitle: "Latin Music · Pop · Rock · Ballads",
-        mute: "🔇 Mute",
-        unmute: "🔊 Sonido",
-        songTitle: "Pedir canción",
-        songSub: "Request a Song",
-        merchTitle: "Merchandising",
-        merchSub: "Merch",
-        followTitle: "Sígueme",
-        followSub: "Follow me",
-        foot: "Muchas gracias por tu apoyo 🙏"
-      },
-      en: {
-        docTitle: "Fabry Orihuela | Home",
-        videoTitle: "Fabry Orihuela - Welcome",
-        subtitle: "Latin Music · Pop · Rock · Ballads",
-        mute: "🔇 Mute",
-        unmute: "🔊 Sound",
-        songTitle: "Request a Song",
-        songSub: "Pedir canción",
-        merchTitle: "Merch",
-        merchSub: "Merchandising",
-        followTitle: "Follow me",
-        followSub: "Sígueme",
-        foot: "Thank you so much for your support 🙏"
-      }
-    };
-
-    let current = "es";
-
-    // Iniciar en EN si el navegador está en inglés
-    const navLang = (navigator.language || "").toLowerCase();
-    if(navLang.startsWith("en")) current = "en";
-
-    // ====== Mute/Unmute por recarga del iframe (simple y fiable en iOS) ======
-    const iframe = document.getElementById("welcomeVideo");
-    const muteBtn = document.getElementById("muteBtn");
-    let isMuted = true; // empezamos mute=1
-
-    function setVideoMute(mute){
-      // reconstruye el src, manteniendo params y cambiando mute=0/1
-      const base = "https://www.youtube.com/embed/jSR1ZkBSNHw";
-      const params = new URLSearchParams({
-        rel: "0",
-        modestbranding: "1",
-        playsinline: "1",
-        mute: mute ? "1" : "0"
-      });
-      iframe.src = `${base}?${params.toString()}`;
-    }
-
-    function applyLang(lang){
-      const t = i18n[lang];
-      document.documentElement.lang = lang;
-      document.title = t.docTitle;
-
-      iframe.title = t.videoTitle;
-      document.getElementById("subtitleText").textContent = t.subtitle;
-
-      document.getElementById("songTitle").textContent = t.songTitle;
-      document.getElementById("songSub").textContent = t.songSub;
-
-      document.getElementById("merchTitle").textContent = t.merchTitle;
-      document.getElementById("merchSub").textContent = t.merchSub;
-
-      document.getElementById("followTitle").textContent = t.followTitle;
-      document.getElementById("followSub").textContent = t.followSub;
-
-      document.getElementById("footText").textContent = t.foot;
-
-      // texto del botón mute según estado
-      muteBtn.textContent = isMuted ? t.mute : t.unmute;
-
-      // estado del switch
-      const btnES = document.getElementById("btnES");
-      const btnEN = document.getElementById("btnEN");
-      if(lang === "es"){
-        btnES.classList.add("active"); btnEN.classList.remove("active");
-        btnES.setAttribute("aria-selected","true"); btnEN.setAttribute("aria-selected","false");
-      } else {
-        btnEN.classList.add("active"); btnES.classList.remove("active");
-        btnEN.setAttribute("aria-selected","true"); btnES.setAttribute("aria-selected","false");
-      }
-    }
-
-    // Inicial
-    applyLang(current);
-
-    // Switch handlers
-    document.getElementById("btnES").addEventListener("click", () => {
-      current = "es"; applyLang(current);
-    });
-    document.getElementById("btnEN").addEventListener("click", () => {
-      current = "en"; applyLang(current);
-    });
-
-    // Mute toggle
-    muteBtn.addEventListener("click", () => {
-      isMuted = !isMuted;
-      setVideoMute(isMuted);
-      applyLang(current);
-    });
-  </script>
 </body>
 </html>
-
